fixed random placement button overlap with computer-board in smaller screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-@media screen and (width <= 900px) {
+@media screen and (max-width: 900px) {
     .boards-container {
       flex-direction: column;
       gap: 20px;
@@ -23,10 +23,10 @@
 .main-container{
     padding: 30px;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
-    gap: 5%;
+    gap: 30px;
     justify-content: center;
     align-items: center;
 }
@@ -94,8 +94,8 @@
 }
 
 .grey-background{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 150%;
     background-color: rgba(0, 0, 0, 0.5); /* 50% opaque black background */
     position:absolute;
     display: flex;
@@ -162,4 +162,8 @@
 .legends-container{
     display: flex;
     gap: 5px;
+}
+
+.buttons-container {
+  margin-top: 20px;
 }
